@@ -1,10 +1,12 @@
 package Data::ES::Senado;
 
+use utf8;
+
 use warnings;
 use strict;
 use Carp;
 
-use version; our $VERSION = qv('0.0.5');
+use version; our $VERSION = qv('0.0.7');
 
 # Other recommended modules (uncomment to use):
 #  use IO::Prompt;
@@ -131,6 +133,8 @@ sub orden_de {
 "La Nación española, deseando establecer la justicia, la libertad y la seguridad y promover el bien de cuantos la integran, en uso de su soberanía, proclama su voluntad de:Garantizar la convivencia democrática dentro de la Constitución y de las leyes conforme a un orden económico y social justo. Consolidar un Estado de Derecho que asegure el imperio de la ley como expresión de la voluntad popular. Proteger a todos los españoles y pueblos de España en el ejercicio de los derechos humanos, sus culturas y tradiciones, lenguas e instituciones. Promover el progreso de la cultura y de la economía para asegurar a todos una digna calidad de vida. Establecer una sociedad democrática avanzada, y Colaborar en el fortalecimiento de unas relaciones pacíficas y de eficaz cooperación entre todos los pueblos de la Tierra. "; # Magic true value required at end of module
 __END__
 
+=encoding utf8
+
 =head1 NAME
 
 Data::ES::Senado - Clase base para representar los datos del Senado español
@@ -200,8 +204,7 @@ debe estar funcionando.
 =head1 DEPENDENCIES
 
 Base de datos Mysql. Como usa enum, no puede usar SQLite (aunque
-estaría bien tener una versión)
-
+estaría bien tener una versión para esta).
 
 =head1 INCOMPATIBILITIES
 
@@ -215,11 +218,15 @@ Please report any bugs or feature requests to
 C<bug-es-senado@rt.cpan.org>, or through the web interface at
 L<http://rt.cpan.org>.
 
+=head1 SEE ALSO
+
+Este programa se ha usado para extraer los datos en la pagina de
+Senado.info L<http://sena2.info>, formando parte del Desafio Abredatos
+2010 L<http://abredatos.es>
 
 =head1 AUTHOR
 
 JJ Merelo  C<< <jj@merelo.net> >>
-
 
 =head1 LICENCE AND COPYRIGHT
 
